[package]
name = "rust_wc"
version = "0.1.0"
edition = "2021"
authors = ["Michael Huang <michaelh@casual.place>"]
description = "Rust wc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.6"
clap = { version = "4.0.22", features = ["derive"] }
predicates = "2.1.2"
rand = "0.8.5"
